Move some methods to `common` package Add tests dependencies