@@ -15,6 +15,7 @@ dependencies {
     implementation(kotlin("stdlib"))
     implementation(group = "org.jgrapht", name = "jgrapht-core", version = "1.5.0")
     implementation(group = "org.jgrapht", name = "jgrapht-io", version = "1.5.0")
+    implementation("org.junit.jupiter:junit-jupiter:5.4.2")
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
@@ -26,4 +27,9 @@ intellij {
 
 tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+tasks.withType<Test> {
+    useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
